--- a/src/main/resources/static/css/my/modal.css
+++ b/src/main/resources/static/css/my/modal.css
@@ -133,8 +133,9 @@
 }
 
 .gendermodal{
-    width: 50px;
-    margin-right: 10px;
+    width: 30px;
+    height: 20px;
+    /*margin-right: 10px;*/
 }
 
 .modal-nav button {
