Feat: Admin recruit HTML

--- a/src/main/resources/templates/admin/include/admin_sidebar.html
+++ b/src/main/resources/templates/admin/include/admin_sidebar.html
@@ -51,6 +51,7 @@
         <li><a th:href="@{/admin/cs/notice/list}" class="notice">공지사항</a></li>
         <li><a th:href="@{/admin/cs/faq/list}" class="faq">자주묻는질문</a></li>
         <li><a th:href="@{/admin/cs/qna/list}" class="qna">문의하기</a></li>
+        <li><a th:href="@{/admin/cs/recruit/list}" class="recruit">채용하기</a></li>
       </ol>
     </li>
   </ul>
