Fix : admin recruit 링크연결

--- a/src/main/resources/templates/admin/cs/recruit/list.html
+++ b/src/main/resources/templates/admin/cs/recruit/list.html
@@ -55,6 +55,7 @@
                     <td>120</td>
                     <td>광고사업</td>
                     <td>경력 4~15년</td>
+                    <td>정규직</td>
                     <td>광고 플랫폼 기획</td>
                     <td>관리자</td>
                     <td>모집중</td>
