--- a/src/main/resources/templates/admin/include/admin_modal.html
+++ b/src/main/resources/templates/admin/include/admin_modal.html
@@ -390,7 +390,7 @@
                             <td>
                                 <div>
                                     <input type="text" name="zip" id="zip1" placeholder="우편번호" readonly/>
-                                    <button id="addressButton" type="button" class="btnZip infobutton" onclick="postcode2()">검색</button>
+                                    <button id="addressButton" type="button" class="btnZip infobutton" onclick="postcode2()">우편번호검색</button>
 
                                 </div>
                             </td>
