--- a/src/main/resources/templates/admin/member/list.html
+++ b/src/main/resources/templates/admin/member/list.html
@@ -4,7 +4,6 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{admin/layout/adminlayout}">
-
 <!--
    날짜 : 2024/10/25 (수정해주세요)
    이름 : 이도영(최초 작성자)
@@ -14,22 +13,16 @@
    - 2025/10/24 박서홍 - 관리자 - 회원정보 출력 코드 수정
    - 2025/10/25 박서홍 - 관리자 - 회원정보 검색 기능 구현
    -->
-
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/admin/member/list.css}" />
 </th:block>
+
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
     <script type="text/javascript" th:src="@{/js/admin/config/Member modal.js}"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-
-    <!--    <script type="text/javascript" th:src="@{/js/login/postcode.js}"></script>-->
-
 </th:block>
-
-
-
 <div class="content" layout:fragment="content">
     <div th:replace="admin/include/admin_modal :: #userchangemodal"></div>
     <div class="dashboard">
@@ -72,13 +65,13 @@
                 </thead>
                 <tbody>
                 <tr th:each="member, stat : ${memberList}" class="admin_list">
-                    <td><input type="checkbox" value="${member.uid}" name="RowCheck" /></td>
+                    <td><input type="checkbox" th:value="${member.uid}" name="RowCheck" /></td>
                     <td th:text="${stat.index + 1}">번호</td>
                     <td th:text="${member.uid}">UID</td>
                     <td th:text="${member.name}">이름</td>
                     <td th:text="${member.gender}">성별</td>
                     <td>
-                        <select th:value="${member.grade}">
+                        <select name="grade" th:value="${member.grade}">
                             <option value="vvip" th:selected="${member.grade == 'vvip'}">VVIP</option>
                             <option value="vip" th:selected="${member.grade == 'vip'}">VIP</option>
                             <option value="gold" th:selected="${member.grade == 'gold'}">GOLD</option>
@@ -86,48 +79,32 @@
                             <option value="family" th:selected="${member.grade == 'family'}">FAMILY</option>
                         </select>
                     </td>
-
                     <td th:text="${member.points}">포인트</td>
                     <td th:text="${member.email}">이메일</td>
                     <td th:text="${member.ph}">전화번호</td>
                     <!-- 가입일 (포맷 지정) -->
                     <td th:text="${#temporals.format(member.createdAt, 'yyyy-MM-dd HH:mm:ss')}">가입일</td>
-
-                    <!--                    <td th:text="${member.birth != null ? #temporals.format(member.birth, 'yyyy-MM-dd') : '날짜 없음'}">가입일</td>-->
                     <td th:text="${member.status == 1 ? '정상' : (member.status == 2 ? '중지' : (member.status == 3 ? '휴면' : (member.status == 4 ? '탈퇴' : '상태없음')))}">상태</td>
-
-
-
                     <td style="line-height: 20px">
-                        <!-- 회원 목록을 반복하여 각 회원에 대한 수정 버튼 생성 -->
-                        <ul>
-                            <li th:each="member : ${memberList}">
-                                <a href="#" data-modal="userchangemodal" th:attr="data-user-id=${member.uid}" class="cs_modify-btn" onclick="openUserChangeModal(this)">[수정]</a>
-                                <!-- 추가적인 회원 정보 표시 -->
-                            </li>
-                        </ul>
-
-                        <a href="" class="cs_delete-btn">[중지]</a>
-                    </td>
+                        <div style="display: flex; flex-direction: column; align-items: flex-start;">
+                            <a href="#" data-modal="userchangemodal" th:attr="data-user-id=${member.uid}" class="cs_modify-btn" onclick="openUserChangeModal(this)">[수정]</a>
+                            <a href="#" class="cs_delete-btn">[중지]</a>
+                        </div>
                 </tr>
                 </tbody>
             </table>
-
-            <a class="delete_btn">선택수정</a>
-
+            <button class="insert_btn">선택수정</button>
             <div class="pagingBox">
                 <div class="pagingList">
                     <!-- 이전 버튼 -->
                     <th:block th:if="${pageInfo.prev}">
                         <a th:href="@{/admin/member/list(pg=${pageInfo.pg - 1})}" class="prev">←</a>
                     </th:block>
-
                     <!-- 페이지 링크 -->
                     <th:block th:each="num : ${#numbers.sequence(pageInfo.start, pageInfo.end)}">
                         <a th:href="@{/admin/member/list(pg=${num})}" th:text="${num}"
                            th:classappend="${pageInfo.pg == num} ? 'active'"></a>
                     </th:block>
-
                     <!-- 다음 버튼 -->
                     <th:block th:if="${pageInfo.next}">
                         <a th:href="@{/admin/member/list(pg=${pageInfo.pg + 1})}" class="next">→</a>
