--- a/src/main/resources/templates/cs/faq/view.html
+++ b/src/main/resources/templates/cs/faq/view.html
@@ -18,13 +18,13 @@
     <aside class="cs_sidebar">
       <h2>자주묻는질문</h2>
       <ul>
-        <li><a href="#">회원</a></li>
-        <li><a href="#">쿠폰 / 이벤트</a></li>
-        <li><a href="#">주문 / 결제</a></li>
-        <li><a href="#">배송</a></li>
-        <li><a href="#">취소 / 반품 / 교환</a></li>
-        <li><a href="#">여행 / 숙박 / 항공</a></li>
-        <li><a href="#">안전거래</a></li>
+        <li><a href="javascript:void(0);" onclick="loadFaqsByType('회원')">회원</a></li>
+        <li><a href="javascript:void(0);" onclick="loadFaqsByType('쿠폰 / 이벤트')">쿠폰 / 이벤트</a></li>
+        <li><a href="javascript:void(0);" onclick="loadFaqsByType('주문 / 결제')">주문 / 결제</a></li>
+        <li><a href="javascript:void(0);" onclick="loadFaqsByType('배송')">배송</a></li>
+        <li><a href="javascript:void(0);" onclick="loadFaqsByType('취소 / 반품 / 교환')">취소 / 반품 / 교환</a></li>
+        <li><a href="javascript:void(0);" onclick="loadFaqsByType('여행 / 숙박 / 항공')">여행 / 숙박 / 항공</a></li>
+        <li><a href="javascript:void(0);" onclick="loadFaqsByType('안전거래')">안전거래</a></li>
       </ul>
     </aside>
     <article class="faq_article_view">
@@ -48,6 +48,7 @@
         </p>
       </div>
       <a th:href="@{/cs/layout/faq/list}" class="btnList">목록</a>
+      <script src="/js/cs/faq.js"></script>
     </article>
   </section>
 </div>
