--- a/src/main/resources/templates/cs/qna/list.html
+++ b/src/main/resources/templates/cs/qna/list.html
@@ -18,13 +18,13 @@
     <aside class="cs_sidebar">
       <h2>문의하기</h2>
       <ul>
-        <li><a href="#">회원</a></li>
-        <li><a href="#">쿠폰 / 이벤트</a></li>
-        <li><a href="#">주문 / 결제</a></li>
-        <li><a href="#">배송</a></li>
-        <li><a href="#">취소 / 반품 / 교환</a></li>
-        <li><a href="#">여행 / 숙박 / 항공</a></li>
-        <li><a href="#">안전거래</a></li>
+        <li><a href="javascript:void(0);" onclick="loadQnasByType('회원')">회원</a></li>
+        <li><a href="javascript:void(0);" onclick="loadQnasByType('쿠폰 / 이벤트')">쿠폰 / 이벤트</a></li>
+        <li><a href="javascript:void(0);" onclick="loadQnasByType('주문 / 결제')">주문 / 결제</a></li>
+        <li><a href="javascript:void(0);" onclick="loadQnasByType('배송')">배송</a></li>
+        <li><a href="javascript:void(0);" onclick="loadQnasByType('취소 / 반품 / 교환')">취소 / 반품 / 교환</a></li>
+        <li><a href="javascript:void(0);" onclick="loadQnasByType('여행 / 숙박 / 항공')">여행 / 숙박 / 항공</a></li>
+        <li><a href="javascript:void(0);" onclick="loadQnasByType('안전거래')">안전거래</a></li>
       </ul>
     </aside>
     <article class="qna_article">
@@ -69,6 +69,7 @@
         <!-- 문의하기 버튼 -->
         <a th:href="@{/cs/layout/qna/write}" class="ask">문의하기</a>
       </div>
+      <script src="/js/cs/qna.js"></script>
 
     </article>
   </section>
